<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="net.somtic.intents.MainActivity" >

    <Button
        android:id="@+id/botonWeb"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_web"
        android:onClick="pgWeb" />

    <Button
        android:id="@+id/botonTelefono"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_telefono"
        android:onClick="llamadaTelefono" />

    <Button
        android:id="@+id/botonMaps"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_maps"
        android:onClick="googleMaps" />

    <Button
        android:id="@+id/botonFoto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_foto"
        android:onClick="hacerFoto" />

    <Button
        android:id="@+id/botonCorreo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_correo"
        android:onClick="mandarCorreo" />

    <Button
        android:id="@+id/botonBuscar"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_buscar"
        android:onClick="buscar"
        android:nestedScrollingEnabled="true" />

    <Button
        android:id="@+id/botonDialer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_telefono2"
        android:nestedScrollingEnabled="true"
        android:onClick="llamadaTelefono2" />

    <Button
        android:id="@+id/botonSV"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_sv"
        android:onClick="streetView" />

    <Button
        android:id="@+id/botonCompartir"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_compartir"
        android:onClick="compartir" />

</LinearLayout>